modules/gdscript/tests/scripts/analyzer/errors/return_incompatible_packed_array.gd
func get_string_array() -> Array[String]:
	var result := PackedInt32Array()
	return result

func test():
	print(var_to_str(get_string_array()))
